src/test/ui/out-of-order-shadowing.stderr
error[E0659]: `bar` is ambiguous (macro-expanded name vs less macro-expanded name from outer scope during import/macro resolution)
  --> $DIR/out-of-order-shadowing.rs:5:1
   |
LL | bar!();
   | ^^^ ambiguous name
   |
note: `bar` could refer to the macro defined here
  --> $DIR/out-of-order-shadowing.rs:4:1
   |
LL | define_macro!(bar);
   | ^^^^^^^^^^^^^^^^^^^
note: `bar` could also refer to the macro defined here
  --> $DIR/out-of-order-shadowing.rs:3:1
   |
LL | macro_rules! bar { () => {} }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
